-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 21, 22
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8324393 | 22.0.1 | Stefan Karlsson | P2 | Resolved | Fixed | b02 |
| JDK-8323166 | 22 | Stefan Karlsson | P2 | Resolved | Fixed | b32 |
| JDK-8345985 | 21.0.7-oracle | Yagmur Eren | P2 | Closed | Fixed | b01 |
| JDK-8325336 | 21.0.3 | Aleksey Shipilev | P2 | Resolved | Fixed | b02 |
Sample out:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (<workspace>/open/src/hotspot/share/gc/z/zAddress.inline.hpp:491), pid=21129, tid=21136
# assert(!is_null(ptr)) failed: not supported
#
# JRE version: Java(TM) SE Runtime Environment (22.0+27) (fastdebug build 22-ea+27-2262)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 22-ea+27-2262, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x17e5b30] ZPointer::is_old_load_good(zpointer)+0x60
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to <scratch>/1/core.21129)
#
# An error report file with more information is saved as:
# <scratch>/jtreg_open_test_jdk_jdk_jfr/scratch/1/hs_err_pid21129.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8323166 Generational ZGC: Relocation selection must join the STS
-
- Resolved
-
-
JDK-8324393 Generational ZGC: Relocation selection must join the STS
-
- Resolved
-
-
JDK-8325336 Generational ZGC: Relocation selection must join the STS
-
- Resolved
-
-
JDK-8345985 Generational ZGC: Relocation selection must join the STS
-
- Closed
-
- relates to
-
JDK-8336408 JVMTI HeapMonitorThreadTest.java fails with "assert(!is_null(ptr)) failed: not supported"
-
- Closed
-
- links to
-
Commit
openjdk/jdk21u-dev/85f4f38c
-
Commit
openjdk/jdk22/a91569dd
-
Commit
openjdk/jdk/ba23025c
-
Review
openjdk/jdk21u-dev/189
-
Review
openjdk/jdk22/74
-
Review
openjdk/jdk/17368