8322957: Generational ZGC: Relocation selection must join the STS

Co-authored-by: Axel Boldt-Christmas <aboldtch@openjdk.org>
Reviewed-by: eosterlund, aboldtch